Add unit test for covering specific processors Enricher and PollEnricher in RoutesRegistry